--- a/templates/builds_sudoers.j2
+++ b/templates/builds_sudoers.j2
@@ -1,12 +1,12 @@
 # Allow non-root users start Codex builds and manage service with sudo.
 
-# {{ codex_service_name }}
-%{{ codex_group }} ALL= NOPASSWD: /usr/bin/systemctl *status {{ codex_service_name }}*
-%{{ codex_group }} ALL= NOPASSWD: /usr/bin/systemctl *start {{ codex_service_name }}*
-%{{ codex_group }} ALL= NOPASSWD: /usr/bin/systemctl *stop {{ codex_service_name }}*
-%{{ codex_group }} ALL= NOPASSWD: /usr/bin/systemctl *restart {{ codex_service_name }}*
-# build-{{ codex_service_name }}
-%{{ codex_group }} ALL= NOPASSWD: /usr/bin/systemctl *status build-{{ codex_service_name }}*
-%{{ codex_group }} ALL= NOPASSWD: /usr/bin/systemctl *start build-{{ codex_service_name }}*
-%{{ codex_group }} ALL= NOPASSWD: /usr/bin/systemctl *stop build-{{ codex_service_name }}*
-%{{ codex_group }} ALL= NOPASSWD: /usr/bin/systemctl *restart build-{{ codex_service_name }}*
+# {{ nim_codex_service_name }}
+%{{ nim_codex_group }} ALL= NOPASSWD: /usr/bin/systemctl *status {{ nim_codex_service_name }}*
+%{{ nim_codex_group }} ALL= NOPASSWD: /usr/bin/systemctl *start {{ nim_codex_service_name }}*
+%{{ nim_codex_group }} ALL= NOPASSWD: /usr/bin/systemctl *stop {{ nim_codex_service_name }}*
+%{{ nim_codex_group }} ALL= NOPASSWD: /usr/bin/systemctl *restart {{ nim_codex_service_name }}*
+# build-{{ nim_codex_service_name }}
+%{{ nim_codex_group }} ALL= NOPASSWD: /usr/bin/systemctl *status build-{{ nim_codex_service_name }}*
+%{{ nim_codex_group }} ALL= NOPASSWD: /usr/bin/systemctl *start build-{{ nim_codex_service_name }}*
+%{{ nim_codex_group }} ALL= NOPASSWD: /usr/bin/systemctl *stop build-{{ nim_codex_service_name }}*
+%{{ nim_codex_group }} ALL= NOPASSWD: /usr/bin/systemctl *restart build-{{ nim_codex_service_name }}*
