[wip] conditionally supply codex_eth_public_key as cli param, drop contract vars/params

--- a/templates/beacon-node.service.j2
+++ b/templates/beacon-node.service.j2
@@ -20,9 +20,9 @@ ExecStart={{ codex_repo_path }}/build/codex \
     --max-peers={{ codex_max_peers }} \
     --api-port={{ codex_rest_port }} \
     --cache-size={{ codex_cache_size }} \
+{% if codex_eth_public_key != "" %}
     --eth-public-key={{ codex_eth_public_key }} \
-    --storage-contract-addr={{ codex_eth_storage_contract }} \
-    --token-contract-addr={{ codex_eth_token_contract }} \
+{% endif %}
 
 [Install]
 WantedBy=multi-user.target
