service: fix name of log level flag
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/templates/beacon-node.service.j2
+++ b/templates/beacon-node.service.j2
@@ -13,7 +13,7 @@ SyslogFacility=local6
 SyslogLevel=debug
 Restart=on-failure
 ExecStart={{ nim_codex_repo_path }}/build/codex \
-    --logLevel={{ nim_codex_log_level }} \
+    --log-level={{ nim_codex_log_level }} \
     --data-dir={{ nim_codex_data_folder }} \
     --listen-addrs=/ip4/{{ nim_codex_public_address }}/tcp/{{ nim_codex_listening_port }} \
     --max-peers={{ nim_codex_max_peers }} \
