service: fix name of codex binary
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/templates/beacon-node.service.j2
+++ b/templates/beacon-node.service.j2
@@ -12,7 +12,7 @@ SyslogIdentifier={{ nim_codex_service_name }}
 SyslogFacility=local6
 SyslogLevel=debug
 Restart=on-failure
-ExecStart={{ nim_codex_repo_path }}/build/codex \
+ExecStart={{ nim_codex_repo_path }}/build/nim_codex \
     --log-level={{ nim_codex_log_level }} \
     --data-dir={{ nim_codex_data_folder }} \
     --listen-addrs=/ip4/{{ nim_codex_public_address }}/tcp/{{ nim_codex_listening_port }} \
