--- a/templates/codex.service.j2
+++ b/templates/codex.service.j2
@@ -15,9 +15,10 @@ Restart=on-failure
 ExecStart={{ nim_codex_repo_path }}/build/nim_codex \
     --log-level={{ nim_codex_log_level }} \
     --data-dir={{ nim_codex_data_folder }} \
-    --listen-addrs=/ip4/{{ nim_codex_public_address }}/tcp/{{ nim_codex_listening_port }} \
-    --max-peers={{ nim_codex_max_peers }} \
+    --listen-ip={{ nim_codex_public_address }} \
+    --listen-port={{ nim_codex_listening_port }} \
     --api-port={{ nim_codex_rest_port }} \
+    --max-peers={{ nim_codex_max_peers }} \
     --cache-size={{ nim_codex_cache_size }} \
 
 [Install]
