--- a/templates/codex.service.j2
+++ b/templates/codex.service.j2
@@ -15,6 +15,7 @@ Restart=on-failure
 ExecStart={{ nim_codex_repo_path }}/build/nim_codex \
     --log-level={{ nim_codex_log_level }} \
     --data-dir={{ nim_codex_data_folder }} \
+    --udp-port={{ nim_codex_discovery_port }} \
     --listen-ip={{ nim_codex_public_address }} \
     --listen-port={{ nim_codex_listening_port }} \
     --api-port={{ nim_codex_rest_port }} \
