service: rename --udp-port flag to --disc-port
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/templates/codex.service.j2
+++ b/templates/codex.service.j2
@@ -15,7 +15,7 @@ Restart=on-failure
 ExecStart={{ nim_codex_repo_path }}/build/nim_codex \
     --log-level={{ nim_codex_log_level }} \
     --data-dir={{ nim_codex_data_folder }} \
-    --udp-port={{ nim_codex_discovery_port }} \
+    --disc-port={{ nim_codex_discovery_port }} \
     --listen-addrs=/ip4/{{ nim_codex_listening_address }}/tcp/{{ nim_codex_listening_port }} \
     --announce-addrs=/ip4/{{ nim_codex_announce_address }}/tcp/{{ nim_codex_listening_port }} \
     --api-port={{ nim_codex_rest_port }} \
