--- a/templates/codex.service.j2
+++ b/templates/codex.service.j2
@@ -14,10 +14,10 @@ SyslogLevel=debug
 Restart=on-failure
 ExecStart={{ nim_codex_repo_path }}/build/nim_codex \
     --log-level={{ nim_codex_log_level }} \
+    --nat={{ nim_codex_public_address }} \
     --data-dir={{ nim_codex_data_folder }} \
     --disc-port={{ nim_codex_discovery_port }} \
     --listen-addrs=/ip4/{{ nim_codex_listening_address }}/tcp/{{ nim_codex_listening_port }} \
-    --announce-addrs=/ip4/{{ nim_codex_announce_address }}/tcp/{{ nim_codex_listening_port }} \
     --api-port={{ nim_codex_rest_port }} \
     --max-peers={{ nim_codex_max_peers }} \
     --cache-size={{ nim_codex_cache_size }} \
