update build command `make exec` to `make`

--- a/templates/scripts/build.sh.j2
+++ b/templates/scripts/build.sh.j2
@@ -24,7 +24,7 @@ function buildBinaries() {
 {% endif %}
 
     make update OVERRIDE=1
-    make exec
+    make
 
     # Rename binaries to match commit they were built from.
     mv "build/codex" "build/nim_codex_${COMMIT}"
